fix: add z-index value to nav component

--- a/src/components/Nav/nav-header.scss
+++ b/src/components/Nav/nav-header.scss
@@ -5,6 +5,7 @@ nav
 	position: relative;
 	padding-top: 66px;
 	line-height: 1;
+	z-index: z-index(nav);
 
 	.logo-block
 	{
